<resources>
    <string name="app_name">Financial ISEP Reports</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_invoice">FullscreenActivity</string>


    <string name="hello_world">Hello world!</string>
    <string name="interstitial_button_text">Show Interstitial Ad</string>
    <string name="second_activity_title">SecondActivity</string>
    <string name="second_activity_content">This is the second activity.</string>

    <!--
        TODO: Replace this with your own Admob App ID! This value is only a sample.
    -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>


    <string name="back">Back</string>
    <string name="invoices">Invoices</string>
    <string name="todo">TODO</string>
    <string name="expenses">Expenses</string>
    <string name="categories">Categories</string>
    <string name="statistics">Statistics</string>
    <string name="my_treasory">My Treasory</string>
    <string name="menu">Menu</string>
    <string name="my_treasury">treasury</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spreadsheet">spreadsheet</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">add</string>
    <string name="pick_a_range_of_dates">Pick a range of dates</string>
    <string name="date_from">Date from</string>
    <string name="date_format">--/--/----</string>
    <string name="date_to">Date to</string>
    <string name="total_exp_date">Total</string>

</resources>